--- a/views/__layout.twig
+++ b/views/__layout.twig
@@ -13,26 +13,23 @@
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
-                <a class="navbar-brand" href="#"><i class="fas fa-cake-candles"></i></a>
+                <a class="navbar-brand" href="#"><i class="fas fa-shuttle-space"></i></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                        <!--{% for item in nav %}
-                            {{ macros.mainnav(item.title, item.url, title == item.title) }}
-                        {% endfor %}-->
-                        <!-- Оставил ссылку на главную -->
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="/">Главная</a>
                         </li>
-                            <!-- остальные заменил на цикл по типам -->
                         {% for type in types %}
                             <li class="nav-item">
-                                <!-- добавил href="/?type={{ type.type }}" -->
                                 <a class="nav-link" href="/?type={{ type.type }}">{{ type.type|title }}</a>
                             </li>
                         {% endfor %}
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="/search">Поиск</a>
+                        </li>
                     </ul>
                 </div>
             </div>
